fixed size on mobile again

--- a/app/music/music.css
+++ b/app/music/music.css
@@ -151,6 +151,10 @@
         justify-content: center;
         padding: 0.25rem 0.25rem 0.25rem 0.25rem;
     }
+
+    .link-img {
+        height: 200px;
+    }
 }
 
 
